# jupyterlab-conda-store

./: .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yaml  install.json  package.json  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_issue.yml  new_release.md
.github/workflows/: CI.yml  build.yml  build_and_deploy_release.yml  check-release.yml  release.yml
schema/: plugin.json
src/: index.ts
src/__tests__/: jupyterlab_conda_store.spec.ts
src/style/: icons.ts
src/widget/: condaStoreWidget.tsx  index.ts
ui-tests/: jupyter_server_test_config.py  package.json
ui-tests/tests/: jupyterlab_conda_store.spec.ts
