[build-system]
requires = ["hatchling", "jupyterlab>4", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-conda-store"
description = "A JupyterLab extension that provides a user-friendly graphical interface for building and managing environments using an existing conda-store server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
maintainers = [{ name = "Tania Allard", email = "trallard@bitsandchips.me" }]
keywords = ["Jupyter", "JupyterLab", "JupyterLab4", "conda", "environments"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[tool.hatch.version]
source = "nodejs"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync"
]

[project.urls]
Homepage = "https://github.com/conda-incubator/jupyterlab-conda-store"
Repository = "https://github.com/conda-incubator/jupyterlab-conda-store"

[tool.hatch.build]
artifacts = ["jupyterlab_conda_store/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_conda_store/labextension" = "share/jupyter/labextensions/jupyterlab-conda-store"
"install.json" = "share/jupyter/labextensions/jupyterlab-conda-store/install.json"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_conda_store/labextension/static/style.js",
    "jupyterlab_conda_store/labextension/package.json",
]
skip-if-exists = ["jupyterlab_conda_store/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_conda_store/labextension"
